# cobra

./: CMakeLists.txt  README.md  main.cpp
scripts/: shader_embedder.py
shaders/: test.frag  test.vert  text.frag  text.vert
shaders/include/: color.hpp  shader.cpp  shader.hpp  uniform.hpp
shaders/include/shaders/: test.hcs
src/: app.cpp  app.hpp  cobra.hpp
src/matrix/: camera.cpp  camera.hpp  matrix_interface.hpp  ortho.cpp  ortho.hpp
src/model/: model.cpp  model.hpp  vertex_stack.hpp
src/renderer/: font.cpp  font.hpp  renderer.cpp  renderer.hpp  window_spec.hpp
